# neoboot

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  monorepo.code-workspace  pyproject.toml
src/cli/: Makefile  main.go
src/cli/cmd/: build.go  images.go  push.go
src/cli/utils/: bootfile.go  byte_utils.go  config.go  docker.go  fs.go
src/cli/utils/log/: log_scroller.go  logger.go
src/cli/utils/resources/: bootfile-spec.json
src/experiment/: create.py  root_cert.pem  root_cert.srl  root_private_key.pem  socket.rs  sub_cert.pem  sub_csr.pem  sub_private_key.pem  tcp.rs  udp.rs  validate.py
src/linux/: Dockerfile  Makefile
src/linux/patches/: 0001-Testing.patch
src/proto/: schema.proto
src/proto_py/: schema_pb2.py  schema_pb2.pyi
src/proto_rs/: Cargo.toml
src/proto_rs/src/: build.rs  schema.rs
src/proxyclient/: Makefile  __main__.py  cli.py  config.py
src/proxyclient/commands/: __init__.py  base_command.py  boot.py  chain.py
src/proxyclient/utils/: network.py
src/u-boot/: Dockerfile  Makefile
src/u-boot/patches/: 0001-Create-WASM-config-options.patch  0002-Add-wasm3.patch  0003-Update-include-paths.patch  0004-Add-math-compat.patch  0005-Change-abort-to-panic.patch  0006-Add-wasm-command.patch  0007-Increase-stack-height.patch  0008-Enable-tracing.patch  0009-TCP-read-write.patch  0009-Testing.patch  0010-Refactor-and-add-UDP.patch  0010-Testing.patch  0011-Adding-dns.patch  0011-Testing.patch  0012-Chain-loading.patch  0012-Testing.patch  0013-Testing.patch
src/wasm_oss/: Cargo.toml  Makefile  README.md
src/wasm_oss/src/: commands.rs  configuration.rs  dns.rs  executor.rs  ffi.rs  hyper_tls.rs  lib.rs  logging.rs  lwip_error.rs  panic.rs  services.rs  tls.rs  util.rs  utils.rs
src/wasm_oss/src/asyncio/: dns.rs  embedded_nal_async.rs  embedded_traits.rs  keyboard.rs  mod.rs  net.rs  sleep.rs  socket.rs  tcp.rs  udp.rs
src/wasm_oss/src/asyncio/http/: client.rs  mod.rs  old.rs  request.rs  response.rs  server.rs  stream.rs  timeout.rs  tls.rs
src/wasm_oss/src/commands/: boot.rs  chain.rs  help.rs  nonce.rs  print.rs  quit.rs  status.rs
src/wasm_oss/src/controllers/: boot.rs
src/wasm_oss/src/errors/: lwip_error.rs  mod.rs  msgpack_error.rs
src/wasm_oss/src/services/: console.rs  server.rs
src/wasm_oss/src/utils/: logging.rs  msgpack.rs  panic.rs
tools/: shared.mk
tools/bootfiles/: Bootfile.yml  Dockerfile
tools/bootfiles/bootloader/: Dockerfile
tools/bootfiles/bootloader/patches/: 0001-Create-WASM-config-options.patch
tools/bootfiles/wasm/: Dockerfile
