[package]
name = "wasm_oss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-fn-stream = "0.2.2"
bytes = "1.10.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-nal-async = "0.8.0"
futures = "0.3.31"
futures-lite = "2.6.0"
futures-util = "0.3.31"
log = "0.4.25"
once_cell = "1.20.2"
reqwless = "0.13.0"
serde = "1.0.217"
serde_json = "1.0.138"

[dependencies.simple-async-local-executor]
version = "0.1.0"
default-features = false


