[package]
name = "wasm_oss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-fn-stream = "0.2.2"
bytes = "1.10.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-nal-async = "0.8.0"
futures = "0.3.31"
futures-lite = "2.6.0"
log = "0.4.25"
reqwless = {version = "0.13.0", features = ["embedded-tls"]}
serde = "1.0.217"
serde_json = "1.0.138"
getrandom = { version = "0.2", features = ["custom"] } 
web-time = { version = "1.1.0", default-features = false }
rustls-rustcrypto = { version = "0.0.2-alpha", default-features = false, features = ["alloc"] }
rustls-pki-types = { version = "1.11.0", default-features = false }
rustls = { version = "0.23.23", default-features = false, features = ["std", "logging"]  }
futures-rustls = { version = "0.26.0", default-features = false }
webpki-roots = "0.26.8"
http-body-util = "0.1.2"
rand = { version = "0.9.0", default-features = false, features = ["std_rng"] }
hyper = { version = "1.6.0", default-features = false, features = ["client", "http1"] }
