[package]
name = "wasm_oss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.10.0"
futures = "0.3.31"
futures-lite = "2.6.0"
log = "0.4.25"
serde = "1.0.217"
serde_json = "1.0.138"
proto_rs = { path = "../proto_rs" }
prost = "0.13.5"
prost-types = "0.13.5"

# http
url = "2.5.4"
hyper = { version = "1.6.0", default-features = false, features = ["client", "server", "http1"] }
http-body-util = "0.1.2"
http = "1.2.0"
async-fn-stream = "0.2.2"

# tls
rustls = { version = "0.23.23", default-features = false, features = ["std", "logging"]  }
rustls-rustcrypto = { version = "0.0.2-alpha" }
rustls-pki-types = { version = "1.11.0", default-features = false }
futures-rustls = { version = "0.26.0", default-features = false }
webpki-roots = "0.26.8"
web-time = { version = "1.1.0", default-features = false }
rand = { version = "0.9.0", default-features = false, features = ["std_rng"] }
once_cell = "1.21.1"
shell-words = "1.1.0"
